--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>bigez.wtf</title>
 </head>
 <body>
+
+  <main>
+
+    <img alt="github profile photo of farukbigez" class="profile-photo" src="https://avatars3.githubusercontent.com/u/60490540?s=460&u=65d0a392ce78b2f2147c90b59986405da43673b4&v=4" >
     
-  <div class="left-section">
-    <p class="name">FARUK BIGEZ</p>
-    <section>hype-driven MERN-stack developer based in istanbul. 
-      since 2018  working as a freelancer and open-source developer. 
-      studying in yildiz technical university.</section>
-  </div>
+    <div class="left-section">
+      <p class="title">faruk bigez</p>
+      <p class="description" >hype-driven MERN-stack developer based in istanbul. 
+        since 2018  working as a freelancer and open-source developer. 
+        studying in yildiz technical university.</p>
+    </div>
+
+  </main>
 
   <div class="links">
     <a  href="https://stackoverflow.com/users/story/11151243">
@@ -58,7 +67,14 @@
   </div>
 
   <div class="right-section">
-
+    <div class="location">
+      <svg width="28" height="36" viewBox="0 0 28 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M13.9999 36C11.4738 33.8457 9.13233 31.484 6.99997 28.9395C3.79998 25.1182 1.76732e-06 19.4274 1.76732e-06 14.0045C-0.00283454 8.3408 3.40848 3.23354 8.64209 1.066C13.8757 -1.10154 19.9 0.0978856 23.9039 4.10458C26.5368 6.72525 28.0117 10.2901 27.9999 14.0045C27.9999 19.4274 24.1999 25.1182 20.9999 28.9395C18.8675 31.484 16.5261 33.8457 13.9999 36ZM13.9999 8.00577C11.8563 8.00577 9.8756 9.14913 8.80381 11.0052C7.73202 12.8612 7.73202 15.1479 8.80381 17.0039C9.8756 18.8599 11.8563 20.0033 13.9999 20.0033C17.3136 20.0033 19.9999 17.3176 19.9999 14.0045C19.9999 10.6915 17.3136 8.00577 13.9999 8.00577Z" fill="#C9FFD4"/>
+      </svg>
+      <div class="location-place">
+        <p>ISTANBUL</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
